--- a/static/css/apps/dash.css
+++ b/static/css/apps/dash.css
@@ -11,7 +11,7 @@
 @media (width >= 1200px) {
   .dashboard-grid {
     flex-direction: row;
-    gap: 1.5rem;
+    gap: 1.25rem;
   }
 
   .dashboard-grid > .dashboard-sidebar {
@@ -36,7 +36,7 @@
 }
 
 .dashboard .gap-custom {
-  gap: 1.75rem;
+  gap: 1.25rem;
 }
 
 .dashboard-table {
